prefer stable false

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
       "url": "https://github.com/sebastien-akki/SyliusLyraMarketplaceApiClient.git"
     }
   },
+  "prefer-stable": false,
   "autoload": {
     "psr-4": {
       "Akki\\SyliusPayumLyraMarketplacePlugin\\": "src/"
