--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "sylius/sylius": "~1.7|~1.5",
     "symfony/process": "~2.7|~3.0|~4.0",
     "akki/syliuslyramarketplaceapiclient": "dev-develop",
-    "ext-json": "*",
-    "ext-http": "*"
+    "ext-json": "*"
   },
   "license": "MIT",
   "authors": [
