--- a/src/Resources/routes.yaml
+++ b/src/Resources/routes.yaml
@@ -5,6 +5,7 @@ lira_marketplace_list:
     _controller: Akki\SyliusPayumLyraMarketplacePlugin\Controller\LyraMarketPlaceApiTestController:listMarketPlace
 
 km_sylius_payum_slimpay_notify:
+  methods: [POST]
   path: /marketplace/notify
   defaults:
     _controller: Akki\SyliusPayumLyraMarketplacePlugin\Controller\NotifyController::doAction
