gestion des annulations de paiement V0.2 petites corrections. tests concluants tentative gestion statut V2 reste à tester les webhooks

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -24,3 +24,13 @@ services:
             - '@service_container'
             - '@sylius.repository.payment_method'
             - '@sylius.repository.order'
+
+    akki.lyra_marketplace.extension.update_payment_state:
+        public: true
+        class: Akki\SyliusPayumLyraMarketplacePlugin\Extension\UpdatePaymentStateExtension
+        arguments:
+            $factory: '@sm.factory'
+        tags:
+            - name: payum.extension
+              factory: stripe_checkout_session
+              alias: flux_se.sylius_payum_stripe.extension.update_payment_state
