gestion des annulations de paiement V0.2 petites corrections. tests concluants tentative gestion statut V2 reste à tester les webhooks

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -32,5 +32,5 @@ services:
             $factory: '@sm.factory'
         tags:
             - name: payum.extension
-              factory: stripe_checkout_session
+              factory: lyra_marketplace
               alias: flux_se.sylius_payum_stripe.extension.update_payment_state
