feature(JIRA): RM-1187 =>  [MARKET PLACE] remontée commandes dans Idefix - token CB + date

--- a/src/Resources/routes.yaml
+++ b/src/Resources/routes.yaml
@@ -15,3 +15,9 @@ km_sylius_payum_lyra_marketplace_refund_notify:
   path: /marketplace/refund/notify
   defaults:
     _controller: Akki\SyliusPayumLyraMarketplacePlugin\Controller\NotifyController::doRefundAction
+
+  km_sylius_payum_lyra_marketplace_token_notify:
+    methods: [POST]
+    path: /marketplace/token/notify
+    defaults:
+      _controller: Akki\SyliusPayumLyraMarketplacePlugin\Controller\NotifyController::doTokenAction
