--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "psr/log": "~1.0",
     "sylius/sylius": "~1.7|~1.5",
     "symfony/process": "~2.7|~3.0|~4.0",
-    "akki/syliuslyramarketplaceapiclient": "dev-feature/RM-1261",
+    "akki/syliuslyramarketplaceapiclient": "dev-develop",
     "ext-json": "*"
   },
   "license": "MIT",
