--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "php-http/guzzle6-adapter": "^1.1|~2.0",
     "psr/log": "~1.0|~2.0",
     "sylius/refund-plugin": "^1.4",
-    "sylius/sylius": "~1.7|~1.5|^1.12",
+    "sylius/sylius": "~1.7|~1.5|^1.12|^1.13|^1.14",
     "symfony/process": "~2.7|~3.0|~4.0|~6.0",
     "akki/syliuslyramarketplaceapiclient": "dev-develop",
     "ext-json": "*"
